# nimosef-v1

./: .gitignore  Dockerfile  LICENSE  README.md  install_gpu.sh  install_steps.sh  pyproject.toml  pytest.ini  requirements.txt  script_test.sh
docs/: data_pipeline.md
nimosef/analysis/: save_mean_img.py  save_shape_code.py
nimosef/config/: config_baseline.json  config_baseline_validation.json  config_dataset_split.json  config_generate_results_baseline.json  config_generate_results_motion.json  config_motion.json  config_motion_validation.json
nimosef/data/: dataset.py  generate_splits.py  io.py  preprocess_data.py  preprocessing.py
nimosef/losses/: base.py  composite.py  utils.py
nimosef/metrics/: dice.py  get_img_metrics.py  get_pc_metrics.py  img_metrics.py  pc_metrics.py
nimosef/models/: layers.py  nimosef.py
nimosef/training/: args.py  generate_results.py  inference.py  logging.py  schedulers.py  train.py
nimosef/utils/: core.py  stats.py  visualization.py  viz3d.py
scripts/: run_generate_results_data.sh  run_inference.sh  run_preprocessing.sh  run_train.sh
tests/: model_profiler.py  run_inference.py  run_train.py  test_decode_latent.py  test_evaluate.py  test_logging.py  test_losses_base.py  test_losses_composite.py  test_losses_utils.py  test_metrics.py  test_nimosef_model.py  test_preprocess_pipeline.py  test_real_dataset.py  test_schedulers.py  test_utils_core.py  test_utils_visualization.py  test_utils_viz3d.py
visualization/: generate_plot_mesh.ipynb  latent_space_analyis_compare_metrics_plots.ipynb  latent_space_analysis_baseline_random_forest.ipynb  script_mesh.py  ukb_utils.py  view_all_metrics_plots_tables.ipynb  view_displacement_plot.ipynb  view_image_metrics.ipynb  view_metrics_plot_curves.ipynb  view_plots_xy.ipynb
