[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nimosef"
version = "0.1.0"
description = "NIMOSEF - Implicit Shape Functions for medical imaging"
authors = [
    { name="Jaume Banus", email="jaume.banus-cobo@chuv.ch" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

# Here we make sure only nimosef gets packaged
[tool.setuptools.packages.find]
include = ["nimosef"]
