[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nimosef"
version = "0.1.0"
description = "NIMOSEF: Neural implicit motion and segmentation functions"
authors = [
  { name = "Jaume Banus", email = "jaume.banus-cobo@chuv.ch" }
]
requires-python = ">=3.10"

dependencies = [  
  "numpy",
  "scipy==1.14.0",
  "pandas==2.2.2",
  "matplotlib==3.9.1",
  "seaborn==0.13.2",
  "scikit-learn>=1.5.1",
  "pyarrow==17.0.0",
  "joblib==1.4.2",
  "PyYAML==6.0.1",
  "pydantic==2.8.2",
  "six==1.16.0",  
  "torchmetrics==1.4.0",
  "torchdiffeq==0.2.4",
  "torch_geometric==2.5.3",
  "xgboost==2.1.0",
  "optuna==3.6.1",
  "wandb==0.17.5",
  "tensorboard==2.18.0",
  "nibabel==5.2.1",
  "torchdata==0.7.1",
  "nitransforms==23.0.1",
  "scikit-image==0.25.2",
  "umap-learn==0.5.8",
  "geomstats==2.8.0",
  "pyvista==0.46.3",
  "statsmodels==0.14.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov",
  "ruff",
  "black",
  "bandit",
  "safety"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.ruff]
target-version = "py310"
line-length = 88
indent-width = 4

[tool.ruff.lint]
extend-select = ["UP", "D", "E", "W", "I", "PL", "F", "SIM", "B", "C4"]

[tool.ruff.lint.pydocstyle]
convention = "google"
